deployments.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: blog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: "pwplusni/pwplusni:first"
          ports:
            - containerPort: 80
