service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blog
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: blog
